2006-03-17  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_driver.c: (RADEONGetAccessibleVRAM),
	(RADEONPreInitVRAM):
	Add missing return statement (the driver would not start randomly),
	add RV410 to the list of new generation cards for the memory map
	setup and fix a bogus message.

2006-03-16  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_driver.c: (RADEONInitCrtcRegisters),
	(RADEONInitCrtc2Registers), (RADEONDoAdjustFrame):
	Fix incorrect CRTC2_OFFSET values when using old-style dual head (not
	MergedFB). Fixes Xinerama for me.

2006-03-16  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_driver.c: (RADEONWaitForVerticalSync),
	(RADEONWaitForVerticalSync2), (RADEONLoadPalette),
	(RADEONScreenInit), (RADEONRestoreMemMapRegisters),
	(RADEONRestoreCrtcRegisters), (RADEONRestoreCrtc2Registers),
	(RADEONDoAdjustFrame), (RADEONCloseScreen):
	* src/radeon_reg.h:
	Add various workarounds that seem to fix some remaning lockup
	scenarios I'm experiencing with the driver when setting the memory
	map. Some of the magic delays are a bit dodgy but they seem to work, I
	suppose I can't do better now without help from ATI. Also removed some
	really too noisy debug messages.

2006-03-15  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon.h:
	* src/radeon_dri.c: (RADEONDRIScreenInit),
	(RADEONDRIDoCloseScreen), (RADEONDRIFinishScreenInit),
	(RADEONDRIStop), (RADEONDRICloseScreen):
	* src/radeon_driver.c: (RADEONCloseScreen):
	Fix various issues with DRI & server recycle by putting DRICloseSreen
	in the normal CloseScreen callback chain at a spot that matches the
	call to DRIFinishScreenInit in order to unwrap at the right time.

2006-03-13  Benjamin Herrenschmidt  <benh@kernel.crashing.org>

	* src/radeon_video.c: (RADEONSetTransform):
	Fix typo in the function setting the color space transformation
	factors for old radeon

2006-03-13  Benjamin Herrenschmidt  <benh@kernel.crashing.org>
